# CoursePlanMaker

./: .gitignore  AGENTS.md  README.md  pyproject.toml  validate_rp.py  Промты.txt  ФОС.БазыДанных.2025.md  промты
.agents/skills/create-rp/: SKILL.md
.agents/skills/populate-disciplines-db/: SKILL.md
data/: disciplines.yaml
db/: create_db.py  disciplines.db  populate_bachelor_apk_2025.py  populate_magistracy_2025.py  validate_fos.py
docs/: РП.БазыДанных.2025.md  ФОС.БазыДанных.2025.md
examples/: ПримерФОС. ТВП. ИВТ,ВМК. 2019.docx  ПримерФОС_raw.md  примерРП.docx  примерРП.md
scripts/: db_tools.py  validate_fos.py  validate_rp.py
tests/: test_create_db.py  test_db_tools.py  test_validate_fos.py  test_validate_rp.py
Шаблоны/: рабочая_программа_дисциплины.md  фонд_оценочных_средств.md
исходные_данные/учебные_планы/: _extract_meta.py
служебные_файлы/: Перечень реализуемых образовательных программ.html
учебные_планы_и_тп/: Monitoring_RP_Fakultet_KNiT_IVT_i_PM__Dolgikh.xlsx
учебные_планы_и_тп/Перечень реализуемых образовательных программ_files/: innerpage.css  learning_program.css  learning_program.js
учебные_планы_и_тп/учебные_планы/: 2025_ивт_очн.txt
