[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "courseplanmaker"
version = "0.1.0"
description = "Генератор рабочих программ дисциплин (РП) и ФОС"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6",
    "python-docx>=1.2",
    "pytest>=9",
    "openpyxl>=3",
    "jinja2>=3",
    "markdown-it-py>=3",
    "lxml>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]